<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IdeaBoardz</string>
    <string name="option1">Try The Test Ideaboardz.</string>
    <string name="option2">View A Board</string>
    <string name="option3">FAQ</string>
    <string name="option4">Feedback: Tell us about the app</string>
    <string name="menu_add">Add Idea</string>
    <string name="BLACK">#000</string>
    <string name="Submit">Submit</string>
    <string name="Go">Go</string>
    <string name="app_details">Brainstorm, retrospect, collaborate</string>
    <string name="use_board">Use a Board..??</string>
    <string name="test_board">Test Drive..???</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="option5">Recent boards</string>
    <string name="choose_section">Choose section..!!!</string>
    <string name="empty_board_list_text">No ideas added yet..!!</string>
    <color name="gray">#5A5A5A</color>
    <color name="black">#000</color>
    <color name="blue">#00f</color>
    <color name="red">#f00</color>
    <string-array name="options">
        <item>By votes</item>
        <item>By creation time</item>
    </string-array>

</resources>