<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:focusable="false"
                android:orientation="vertical">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/app_details"
            android:id="@+id/heading"
            android:textStyle="bold"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="20dip"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="6dp"/>
    <Button
            android:id="@+id/viewTestBoard"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:text="@string/option1"
            android:onClick="viewDemo"
            android:background="#ffff88"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:rotation="0"/>
    <Button
            android:id="@+id/viewBoard"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:text="@string/option2"
            android:onClick="viewBoard"
            android:background="#10b6ff"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:rotation="1"/>
    <Button
            android:id="@+id/faq"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:text="@string/option3"
            android:onClick="faq"
            android:background="#ffb25a"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:rotation="-1"/>
    <Button
            android:id="@+id/feedback"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:textSize="20dip"
            android:text="@string/option4"
            android:onClick="feedback"
            android:background="#bdef6b"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:rotation="-3"/>
</LinearLayout>